fix(styling): text contrast fixes (#1493)
Adjusted standard and visited link colours for better contrast on non-white backgrounds; applied white paragraph text to the last dark background section.

--- a/components/_base.css
+++ b/components/_base.css
@@ -79,7 +79,8 @@ p {
 
   .bg-inverted &,
   .bg-inverted-dark &,
-  .bg-inverted-darker & {
+  .bg-inverted-darker &,
+  .bg-inverted--o95 & {
     color: rgb(var(--col-white));
   }
 }
@@ -165,7 +166,8 @@ a {
 
   .bg-inverted &,
   .bg-inverted-dark &,
-  .bg-inverted-darker & {
+  .bg-inverted-darker &,
+  .bg-inverted--o95 & {
     &:not([class]) {
       color: rgb(var(--col-link-on-dark));
 
